--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "abel_ecommerce_shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
